--- a/app/src/main/res/menu/activity_student_list_view_menu.xml
+++ b/app/src/main/res/menu/activity_student_list_view_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:title="Editar" android:id="@+id/activity_student_list_menu_edit"/>
-    <item android:title="Remover" android:id="@+id/activity_student_list_menu_remove"/>
+    <item android:title="@string/editar" android:id="@+id/activity_student_list_menu_edit"/>
+    <item android:title="@string/remover" android:id="@+id/activity_student_list_menu_remove"/>
 </menu>
